[package]
name = "raw-gl-context"
version = "0.1.2"
authors = ["Micah Johnston <micah@glowcoil.com>"]
edition = "2018"
description = "Library for creating an OpenGL context from a RawWindowHandle"
repository = "https://github.com/glowcoil/raw-gl-context"
readme = "README.md"
license = "MIT/Apache-2.0"
build = "build.rs"

[dependencies]
raw-window-handle = "0.5.0"
log = "0.4.14"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.8", features = ["libloaderapi", "minwindef", "ntdef", "windef", "wingdi", "winnt", "winuser"] }
uuid = { version = "0.8", features = ["v4"] }

[target.'cfg(target_os="linux")'.dependencies]
x11 = { version = "2.3", features = ["xlib", "glx"] }

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.24.0"
objc = "0.2.7"
core-foundation = "0.9.1"

[target.'cfg(target_os = "android")'.dependencies]
glutin_egl_sys = "0.1.5"
ndk-sys = "0.3.0"

[dev-dependencies]
gl = "0.14.0"
winit = "0.22.2"
